@@ -1,0 +1,6 @@
+-- @tag: transfer_type_assembled
+-- @description: Transfertyp &quot;gefertigt&quot; wird ben&ouml;tigt.
+-- @depends: release_3_4_0 warehouse
+-- @encoding: utf-8
+
+INSERT INTO transfer_type (direction, description, sortkey) VALUES ('in', 'assembled', (SELECT COALESCE(MAX(sortkey), 0) + 1 FROM transfer_type));
